removed author reference

--- a/templates/earthporn.html
+++ b/templates/earthporn.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>EarthPorn</title>
   <meta name="description" content="Images grabbed from reddit.com/r/earthporn">
-  <meta name="author" content="Justin Steele">
+  <meta name="author" content="">
   <style type="text/css">
   	img {
   		max-width: 100%;
